--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,79 @@
 body {
     padding-top: 5rem;
 }
+
+.box{
+	width: 600px;
+    height: 800px;
+    margin-left: 27%;
+	background: #191919;
+	text-align: center;
+	border-radius: 24px;
+	opacity: 0.8;
+     box-shadow: 1px 2px 6px 2px #e6e8f0;
+}
+
+.inner-top-box{
+    background-color: #007bff;
+    height: 50%;
+    width: 100%;
+    text-align: center;
+    border-radius: 24px 24px 0px 0px;
+}
+
+.img-div{
+    width: 200px;
+    height: 200px;
+    text-align: center;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+.img-div > img{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+}
+
+.inner-bottom-box{
+    background-color: white;
+    height: 50%;
+    width: 100%;
+    text-align: center;
+    border-radius: 0px 0px 24px 24px;
+}
+
+.table-box{
+    margin: 0 auto;
+}
+
+td{
+    padding-left: 15px;
+}
+
+#button{
+    border: 0;
+    background-color: #007bff;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    padding: 12px 127px;
+    outline: none;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    border-radius: 24px;
+    transition: 0.25s;
+    cursor: pointer;
+}
+
+.name{
+    color: white;
+    font-weight: bold;
+}
+
+.description-box{
+    margin: 0 auto;
+    width: 70%;
+}
+
