--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -19,7 +19,7 @@
         <div class="description-box">
         <p>
             <h5>I am a smart and talented young woman who loves web design and development.<br>
-            Contact me if you'd like to work tgether on a new project.</h5>
+            Contact me if you'd like to work together on a new project.</h5>
         </p>
         </div>
         <table class="table-box">
